--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       context: ./DB
     networks:
       - internal_network
+    volumes:
+      - db_data:/path/in/container/to/store/data
 
   thread:
     build:
@@ -22,6 +24,8 @@ services:
       - "80:80"
     networks:
       - internal_network
+    volumes:
+      - thread_data:/path/in/container/to/store/data
 
   sender:
     build:
@@ -33,3 +37,7 @@ services:
 
 networks:
   internal_network:
+
+volumes:
+  db_data:
+  thread_data:
