mise en place html pour test (a revoir)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,30 +9,30 @@ services:
     networks:
       - internal_network
 
-  apache:
-    image: php:7.4-apache
-    volumes:
-      - ./apache/apache.conf:/etc/apache2/sites-available/000-default.conf
-    ports:
-      - "8080:80"
-    depends_on:
-      - api
-    networks:
-      - internal_network
+  # apache:
+  #   image: php:7.4-apache
+  #   volumes:
+  #     - ./apache/apache.conf:/etc/apache2/sites-available/000-default.conf
+  #   ports:
+  #     - "8080:80"
+  #   depends_on:
+  #     - api
+  #   networks:
+  #     - internal_network
 
-  db:
-    build:
-      context: ./DB
-    networks:
-      - internal_network
-    volumes:
-      - db_data:/path/in/container/to/store/data
+  # db:
+  #   build:
+  #     context: ./DB
+  #   networks:
+  #     - internal_network
+  #   volumes:
+  #     - db_data:/path/in/container/to/store/data
 
   thread:
     build:
       context: ./Thread
     ports:
-      - "80:80"
+      - "8000:8000"
     networks:
       - internal_network
     volumes:
