--- a/API/dockerfile
+++ b/API/dockerfile
@@ -5,16 +5,10 @@ FROM node:14
 WORKDIR /app
 
 # Copiez les fichiers nécessaires dans le conteneur
-COPY package*.json ./
-
-# Installez les dépendances
-RUN npm install
-
-# Copiez le reste des fichiers
-COPY . .
+COPY *.php ./
 
 # Exposez le port sur lequel le service écoute
 EXPOSE 3000
 
 # Commande pour démarrer le service
-CMD ["npm", "start"]
+CMD ["php", "-S", "localhost:3000", ".\src\app.php"]
