--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.9'
 
 services:
   api:
-    depends_on:
-      - db #je dépends de la base de donnée
+    # depends_on:
+    #   - db #je dépends de la base de donnée
     build:
       context: ./API
     ports:
@@ -23,7 +23,7 @@ services:
     networks:
       - internal_network
     volumes:
-      - ./Thread:/path/in/container/to/store/data
+      - ./Thread:/var/www/html
 
   sender:
     depends_on:
