--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,8 +28,8 @@ jobs:
 
     - name: Run PHPUnit tests
       run: |
-        docker-compose run --rm app vendor/bin/phpunit API/tests/ApiTest.php
+        vendor/bin/phpunit API/tests/ApiTest.php
 
-    - name: Build and deploy Docker containers
-      run: |
-        docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d --build
+    # - name: Build and deploy Docker containers
+    #   run: |
+    #     docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d --build
