--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Run PHPUnit tests
       run: |
-        vendor/bin/phpunit API/tests/ApiTest.php
+        docker-compose run --rm app chmod +x vendor/bin/phpunit API/tests/ApiTest.php
 
     # - name: Build and deploy Docker containers
     #   run: |
